# sv2

./: .gitignore  README.md  justfile  pyproject.toml  zensical.toml
docs/: index.md  svg_reader.md
src/sv2/: __init__.py  paths.py
src/sv2/cli/: studies.py
src/sv2/cli/make/: main.py
src/sv2/cli/studies/: polyfix_help.py  study.py
src/sv2/layout/: adjacencies.py  transform.py
src/sv2/pfix/: config.py  main.py  workflow_paths.py
src/sv2/svgs/: errors.py  helpers.py  main.py  ortho.py  process.py  rectangle.py
static/4_temp/workflow_test/ortho/init/: out.json
static/4_temp/workflow_test/ortho/ortho/: out.json
static/4_temp/workflow_test/ortho/xmove/: out.json
static/4_temp/workflow_test/ortho/xplan/: out.json
static/4_temp/workflow_test/ortho/ymove/: out.json
static/4_temp/workflow_test/ortho/yplan/: out.json
static/4_temp/workflow_test/rect/init/: out.json
static/4_temp/workflow_test/rect/ortho/: out.json
static/4_temp/workflow_test/rect/simplify/: out.json
static/4_temp/workflow_test/rect/xmove/: out.json
static/4_temp/workflow_test/rect/xplan/: out.json
static/4_temp/workflow_test/rect/ymove/: out.json
static/4_temp/workflow_test/rect/yplan/: out.json
tests/pfix/: test_workflow.py
tests/svgs/: test_read.py
