[project]
name = "sv2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
  { name = "Juliet Nwagwu Ume-Ezeoke", email = "jnwagwu@stanford.edu" },
]
requires-python = ">=3.13"
dependencies = [
  "cyclopts>=4.11.0",
  "matplotlib>=3.10.9",
  "omegaconf>=2.3.0",
  "pyprojroot>=0.3.0",
  "pytest>=9.0.2",
  "svg-path>=7.0",
  "svgpathtools>=1.7.2",
  "utils4plans[yaml]",
  "polyfix",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
utils4plans = { path = "../utils4plans", editable = true }
polyfix = { path = "../polyfix", editable = true }

[project.scripts]
sv2 = "sv2.cli.make.main:main"
sv2s = "sv2.cli.studies.study:main"
